--- a/TrackingISS/TrackingISS/Base.lproj/Main.storyboard
+++ b/TrackingISS/TrackingISS/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,18 +22,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="UlH-m0-VqW">
-                                <rect key="frame" x="-1" y="0.0" width="375" height="398"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="whl-6j-XBZ"/>
                                 </connections>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXR-hM-Z7W">
+                                <rect key="frame" x="284" y="617" width="75" height="30"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <state key="normal" title="Locate ISS"/>
+                                <connections>
+                                    <action selector="zoomToSatellite:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OlQ-30-9N3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="UlH-m0-VqW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-1" id="36g-Fw-7fG"/>
-                            <constraint firstItem="UlH-m0-VqW" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Pz0-KZ-00m"/>
-                            <constraint firstItem="UlH-m0-VqW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-134.5" id="hwE-Xy-Bwc"/>
-                            <constraint firstItem="UlH-m0-VqW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" constant="-269" id="i1o-p1-X6m"/>
+                            <constraint firstAttribute="trailing" secondItem="UlH-m0-VqW" secondAttribute="trailing" id="0Sd-FU-qLN"/>
+                            <constraint firstItem="UlH-m0-VqW" firstAttribute="centerX" secondItem="MXR-hM-Z7W" secondAttribute="centerX" constant="-134" id="CJ4-K0-yaY"/>
+                            <constraint firstItem="MXR-hM-Z7W" firstAttribute="centerY" secondItem="UlH-m0-VqW" secondAttribute="centerY" constant="298.5" id="PWX-Pm-ifx"/>
+                            <constraint firstItem="UlH-m0-VqW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Qb4-ra-Q50"/>
+                            <constraint firstItem="UlH-m0-VqW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Y15-N0-cvn"/>
+                            <constraint firstItem="UlH-m0-VqW" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="ub3-Vj-2kW"/>
                         </constraints>
                     </view>
                     <connections>
@@ -42,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-100" y="135.38230884557723"/>
+            <point key="canvasLocation" x="-396" y="37.331334332833585"/>
         </scene>
     </scenes>
 </document>
